# eracha

./: .gitignore  CMakeLists.txt  LICENSE.md  MMF_MWF_archive_format.md  README.md  archive_format.md  bck_format.md  cheat_codes.md  eracha_exe_strings.md  pal_format.md  san_scb_format.md  sda_format.md
doc/: archive_format.md  bck_format.md  cheat_codes.md  eracha_exe_strings.dump  eracha_versions.md  pal_format.md  san_scb_format.md  san_scb_stb_format.md  sda_format.md  sme_atr_format.md  til_format.md
reverse_engineering/doc/: archive_format.md  eracha_versions.md  san_scb_stb_format.md  sda_format.md  sme_atr_format.md  til_format.md
reverse_engineering/tools/: CMakeLists.txt
reverse_engineering/tools/src/: edc.c  helper.c  helper.h  levelviewer.c  san2ascii.c  san2png.c  sme2ascii.c
reverse_engineering/tools/src/palettes/: era0XX_pal.h
src/: audio.c  audio.h  config.c  config.h  event.c  event.h  file.c  file.h  game.h  helpers.h  level.c  level.h  main.c  video.c  video.h
tools/: CMakeLists.txt  README.md  edam.c  edc.c  pal2gpl.c  san2ascii.c
tools/scripts/: extract_palettes.sh  generate_html.sh  generate_thumbnails.sh
tools/src/: edam.c  helper.c  helper.h  levelviewer.c  pal2gpl.c  pal2png.c  pixelfont.h  san2ascii.c  san2png.c  sme2ascii.c  til2png.c
tools/src/palettes/: era0XX_pal.h  open_pal.h
